--- a/siteDemo.html
+++ b/siteDemo.html
@@ -11,15 +11,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- using IE8 -->
 <!--     [if lt IE 9] -->
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <!--     [endif] -->
 
 
-<!-- mobile
-    <meta name="viewport" content="width = device-width, initial-scale=1">
+    <meta name="viewport" content="width = device-width, initial-scale=1.0">
 
-<!- Twitter Card data -->
+<!-- <!- Twitter Card data -->
     <head>
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Ladygravos">
@@ -38,58 +37,111 @@
   
 <!-- link sheets -->
 <!-- bootstrap -->
+    <link href="css/boostrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="integration.css">
+    <link href="stylesheet" type="text/css" href="siteDemo.css">
 <!--boostrap style*/ -->
-  <link rel="stylesheet" type="text/css" href="boostrap/css/boostrap.css">
+    <link rel="stylesheet" type="text/css" href="css/boostrap.css">
 <!-- fontawesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <!-- google font -->
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
   </head>
+  
   <body>
 
 <div class="container-fluid">
-
 <!--     Header -->
-
-
   <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
-          <p>
-          <span class="glyphicon glyphicon-menu-hamburger">&nbsp;<a href="#nav" title="menu" class="menu-button" id="menu">MENU</a><span>
-          <p>
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>
         </div>
-        <div class="col-lg-offset-8 col-lg-2 col-md-offset-8 col-md-2 col-sm-offset-7 col-sm-3 col-xs-offset-6 col-xs-4">
-          <div class="pull-right">
-            <a href="#nav" title="login" id="login">LOG IN</a>&nbsp;&nbsp;&nbsp;
-            <a href="#" class="btn btn-default btn-sm text-center" role="button">SIGN UP</a>
-          </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK SAMPLES</a>
         </div>
       </div>
     </div>
   </nav>
-  <br/><br/><br/><br/>
+
+</div>
+
+<br/><br/><br/><br/>
 
 
-<div class="text-center">
-  <span class="header"><i class="fa fa-code fa-4x" aria-hidden="true"></i></span>
-    <h1>HOLOGRAM</h1></br></br>
-      <p>SED IPSUM LOREM FEUGIAT MAGNA ELEMENTUM</p>
+
+
+<!-- carouse -->l
+
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <div class="carousel-inner">
+
+    <div class="item active"> 
+      <img src="img/img1.jpg" alt="First slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h1>Katalina NADASI</h1>
+        <p>Integration / Front Development</p>
+        <p></br></br>
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          </a></p>
+      </div>
+    </div>
+
+    <div class="item"> 
+      <img src="img/img2.jpg" alt="Second slide" class="img-responsive">
+    </div>
+
+    <div class="item"> 
+      <img src="img/#" alt="Third slide" class="img-responsive">
+    </div>
+  </div>
+
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">
+  <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="text-center">
+  <span class="header"></span>
+    <h1>Katalina NADASI</h1></br></br>
+      <p>Integration - FrontEnd Development</p>
       <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">PROCEED
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
           </a>
       </p>
 </div>
-  </br></br></br></br>
+  </br></br></br></br> -->
 
 <!-- section 1 -->
 
-
+<!-- 
 <div class="row" id="section1">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   </br></br></br></br>
@@ -123,8 +175,8 @@
   </div>
 </div>
 
-<!-- section 2 -->
-
+<! section 2 -->
+<!-- 
 <span class="text-center">
 <div class="row" id="section2">
   <div class ="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -136,7 +188,7 @@
 
 <div class="row" id="section2text">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="border-right: 1px solid white;">
-    <img src="pics/pic1.jpg" alt="etiam consequat" />
+    <img src="pics/#" alt="etiam consequat" />
     <h2>ETIAM CONSEQUAT</h2></br>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br/>Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.</p>
     <p><a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE</a></p>
@@ -147,14 +199,14 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.</p>
     <p><a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE</a></p>
   </div>
-</div>
+</div> -->
 
 
 
 <!-- section 3 -->
 
 
-<div class="row" id="section3">
+<!-- <div class="row" id="section3">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     </br></br>
     <h1 class="text-center">TEMPUS FEUGIAT</h1>
@@ -205,10 +257,11 @@
 
 </span>
 </div>
-</div>
+</div> -->
 
 <!-- section 4 -->
-<div class="row" id="section4">
+
+<!-- <div class="row" id="section4">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></br></br>
     <h2>SED TRISIQUE</h2>
       <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.
@@ -230,10 +283,10 @@
       </form>
           </label>
   </div>
-</div>
+</div> -->
 
 <!-- section 5 -->
-<span class="text-center">
+<!-- <span class="text-center">
   <div class="row" id="section5">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><br/><br/><br/>
     <h2>MAGNA FEUGIAT LOREM IPSUM?</h2>
@@ -246,11 +299,12 @@
         </p>
     </div>
   </div>
-</span>
+</span> -->
 
 
 <!-- footer -->
-</br></br></br>
+
+<!-- </br></br></br>
 <span class="text-center">
   <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -293,7 +347,7 @@
 
 
 
-</div>
+</div> -->
 
 
 
@@ -311,8 +365,9 @@
 
 
 <!-- jquery and boostrap for js -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.js"></script>
 
   </body>
-</html>
+</html>  -->
