--- a/siteDemo.html
+++ b/siteDemo.html
@@ -40,7 +40,7 @@
     <link href="css/boostrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-    <link href="stylesheet" type="text/css" href="siteDemo.css">
+    <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
 <!--boostrap style*/ -->
     <link rel="stylesheet" type="text/css" href="css/boostrap.css">
 <!-- fontawesome -->
@@ -77,7 +77,7 @@
 
 
 
-<!-- carouse -->l
+<!-- carousel -->
 
 <div id="myCarousel" class="carousel slide">
   <ol class="carousel-indicators">
@@ -116,6 +116,56 @@
   </a>
 </div>
 
+<!-- section 1 resumé -->
+
+<div class="row" id="section1">
+  <span class="text-center">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1>RESUME</h1>
+      <p>Digital strategist becomming frontend developer</p>
+  </div>
+  </span>
+
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>Refuginius / Hackaton</h2>
+        <p>March 2016</p></br>
+          <p>blablabla</p>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>Adaweek / Coding assistant</h2>
+        <p>From December 2015 until now</p></br>
+          <p>blablabla</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>Sneakr.fr / Coding machine</h2>
+        <p>From April 2015 to Mai 2015</p></br>
+          <p>blibliblib</p>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>Believe Digital / Account Manager</h2>
+      <p>bliblbilbilbibliblibliblibliblib</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>ESC Dijon</h2>
+        <p>2e place des Mastère Spécialisé Management des entreprises créatives</p>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <h2>Master Histoire de l'Art</h2>
+      <p>Université Paris X / Nanterre</p>
+    </div>
+  </div>
+
+  </div>
+  
+</div>
 
 
 
@@ -366,8 +416,8 @@
 
 <!-- jquery and boostrap for js -->
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.js"></script>
 
   </body>
-</html>  -->
+</html> 
