--- a/siteDemo.html
+++ b/siteDemo.html
@@ -125,13 +125,18 @@
       <p>Digital strategist becomming frontend developer</p>
   </div>
   </span>
+</div>
 
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>Refuginius / Hackaton</h2>
+  <div class="row" id="section1row1">
+    <span class="border">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="feature">
+        <h2>Refuginius / Hackaton</h2>
         <p>March 2016</p></br>
           <p>blablabla</p>
-    </div>
+        </div>
+      </div>
+    </span>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <h2>Adaweek / Coding assistant</h2>
@@ -139,11 +144,14 @@
           <p>blablabla</p>
     </div>
   </div>
-  <div class="row">
+  
+  <div class="row" id="section1row2">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="feature">
       <h2>Sneakr.fr / Coding machine</h2>
         <p>From April 2015 to Mai 2015</p></br>
           <p>blibliblib</p>
+      </div>
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -151,10 +159,12 @@
       <p>bliblbilbilbibliblibliblibliblib</p>
     </div>
   </div>
-  <div class="row">
+  <div class="row" id="section1row3">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="feature">
       <h2>ESC Dijon</h2>
         <p>2e place des Mastère Spécialisé Management des entreprises créatives</p>
+      </div>
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -162,9 +172,6 @@
       <p>Université Paris X / Nanterre</p>
     </div>
   </div>
-
-  </div>
-  
 </div>
 
 
