rajout section2 et 3

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -174,38 +174,84 @@
   </div>
 </div>
 
+<!-- section 2 présentation -->
 
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="text-center">
-  <span class="header"></span>
-    <h1>Katalina NADASI</h1></br></br>
-      <p>Integration - FrontEnd Development</p>
-      <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
-          </a>
-      </p>
+<div class="row" id="section2">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  </br></br></br></br>
+  <h1 class="text-center">Hi there !</h1>
+    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
+  </div>
 </div>
-  </br></br></br></br> -->
+
+<!-- section 3 présentation -->
+<span class="text-center">
+<div class="row" id="section3">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1 class="text-center">SKILLS</h1>
+    <p class="text-center">blabla</p>
+  </div>
+</div>
+
+<div class="row" id="thumb">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
+      <div class="feature2">
+        <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon1"></i>
+        <h2>Database</h2>
+        <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
+      </div>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
+      <i class="fa fa-diamond fa-3x" aria-hidden="true" id="icon2"></i>
+        <h2>Frontend</h2>
+        <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
+    </div>
+</div>
+
+
+<div class="row" id="thumb">
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
+    <div class="feature2">
+        <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
+          <h2>Backend</h2>
+          <p>Ruby et Rails, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
+    </div>
+  </div>
+
+  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
+    <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon1"></i>
+      <h2>Système versioning</h2>
+        <p>git et github, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum. ET MARKETING DIGITAL, présence en lignen réseaux sociaux.</p>
+  </div>
+</div>
+</span>
+
+
+<span class="text-center">
+  <div class="row" id="learn_more">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <p>
+      <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
+      </a>
+      </p>
+    </div>
+  </div>
+</span>
+
+</span>
+</div>
+</div>
+
+
+
+
+
 
 <!-- section 1 -->
 
 <!-- 
-<div class="row" id="section1">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </br></br></br></br>
-  <h1 class="text-center">AUGUE SED PRETIUM</h1>
-    <p class="text-center">CONSECTETUR NULLAM VEL IACULIS</p>
-  </div>
-</div>
+
 
 <span class="text-center">
   <div class="row" id="pSection1">
@@ -262,59 +308,6 @@
 
 <!-- section 3 -->
 
-
-<!-- <div class="row" id="section3">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    </br></br>
-    <h1 class="text-center">TEMPUS FEUGIAT</h1>
-    <p class="text-center">IPSUM SED ELEMENTUM AMET</p>
-  </div>
-</div>
-
-<div class="row" id="thumb">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-        <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon1"></i>
-        <h2>JUSTO MAGNA</h2>
-        <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-      <i class="fa fa-diamond fa-3x" aria-hidden="true" id="icon2"></i>
-        <h2>SED TRISIQUE</h2>
-        <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-    </div>
-</div>
-
-
-  <div class="row" id="thumb">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-        <i class="fa fa-camera fa-3x" aria-hidden="true" id="icon3"></i>
-          <h2>LACUS PRETIUM</h2>
-          <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-      </div>
-
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
-    <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon1"></i>
-      <h2>DUI VOLUTPAT</h2>
-        <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.</p>
-  </div>
-</div>
-
-
-<span class="text-center">
-<div class="row" id="learn_more">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <p>
-      <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
-      </a>
-    </p>
-  </div>
-</div>
-</span>
-
-</span>
-</div>
-</div> -->
 
 <!-- section 4 -->
 
