rajout sections 4 et 5 et footer

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -148,28 +148,30 @@
   <div class="row" id="section1row2">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <div class="feature">
-      <h2>Sneakr.fr / Coding machine</h2>
-        <p>From April 2015 to Mai 2015</p></br>
-          <p>blibliblib</p>
+      <h2>intégration</h2>
+        <p>From Mai 2015</p></br>
+          <p>Divers projets d'intégration</p>
       </div>
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>Believe Digital / Account Manager</h2>
-      <p>bliblbilbilbibliblibliblibliblib</p>
+      <h2>Sneakr.fr</h2>
+        <p>From April 2015 to Mai 2015</p>
+          <p>coding sdsdsdsdsdsdsdsd</p>
     </div>
   </div>
   <div class="row" id="section1row3">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <div class="feature">
-      <h2>ESC Dijon</h2>
-        <p>2e place des Mastère Spécialisé Management des entreprises créatives</p>
+      <h2>Believe Digital / Account Manager</h2>
+        <p>From to</p>
+          <p>Marketing, reporting, suivi de projet</p>
       </div>
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <h2>Master Histoire de l'Art</h2>
-      <p>Université Paris X / Nanterre</p>
+      <h2>ESC Dijon</h2>
+      <p>2e place des Mastère Spécialisé Management des entreprises créatives</p>
     </div>
   </div>
 </div>
@@ -227,19 +229,125 @@
 </div>
 </span>
 
-
+<!-- section 4 work -->
 <span class="text-center">
-  <div class="row" id="learn_more">
+  <div class="row" id="section4">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <p>
-      <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
-      </a>
-      </p>
+      <h1 class="text-center">WORK</h1>
+      <p class="text-center">blabla</p>
     </div>
   </div>
 </span>
 
+<span class="text-center">
+  <div class="row" id="section4row1">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <h2 class="text-center">ADAWEEK</h2>
+      <p class="text-center">blablsdsdsdsdsdsddsdsdsdsdsdsdsdsdsdsdsdsdsda</p>
+    </div>
+  </div>
 </span>
+
+<span class="text-center">
+  <div class="row" id="section4row2">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <h1 class="text-center">REFUGINIUS</h1>
+      <p class="text-center">blabla</p>
+    </div>
+  </div>
+</span>
+
+<span class="text-center">
+  <div class="row" id="section4row3">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <h1 class="text-center">SNEAKR</h1>
+      <p class="text-center">blabla</p>
+    </div>
+  </div>
+</span>
+
+<!-- Section 5 contact me -->
+
+<div class="row" id="section5">
+  <span class="text-center">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  </div>
+  </span>
+</div>
+
+<section id="two" class="wrapper style2 special">
+  <div class="inner narrow">
+      <header>
+        <h2>Get in touch</h2>
+      </header>
+        <form class="grid-form" method="post" action="#">
+          <div class="form-control narrow">
+            <label for="name">Name</label>
+            <input name="name" id="name" type="text">
+          </div>
+          <div class="form-control narrow">
+            <label for="email">Email</label>
+            <input name="email" id="email" type="email">
+          </div>
+          <div class="form-control">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" rows="4"></textarea>
+          </div>
+          <ul class="actions">
+          <li><input value="Send Message" type="submit"></li>
+          </ul>
+        </form>
+    </div>
+</section>
+
+</br></br></br></br>
+
+<span class="text-center">
+  <div class="row" id="footer">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <ul class="list-inline">
+    <li>
+      <a href="http://twitter.com">
+      <i class="fa fa-twitter fa-2x"></i>&nbsp;
+      </a>
+    </li>
+    <li>
+      <a href="http://facebook.com">
+        <i class="fa fa-facebook fa-2x"></i>&nbsp;
+      </a>
+    </li>
+    <li>
+    <a href="http://linkedin.com" target=blank>
+    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="http://github.com" target="_blank">
+    <i class="fa fa-github fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="#" target="_blank">
+    <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="#" target="_blank">
+    <i class="fa fa-envelope-os fa-2x" aria-hidden="true"></i>
+    </a>
+  </ul>
+    </li></br>
+  </div>
+  </div>
+ </span>
+
+<span class="text-center">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h5>Made with <strong>love<strong></h5><i class="icon-fire"></i>
+    <h5>by<strong> Katalina Nadasi<strong></h5>
+</div>
+</span>
+
+
+
+
 </div>
 </div>
 
@@ -351,53 +459,6 @@
   </div>
 </span> -->
 
-
-<!-- footer -->
-
-<!-- </br></br></br>
-<span class="text-center">
-  <div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <ul class="list-inline">
-    <li>
-      <a href="http://twitter.com">
-      <i class="fa fa-twitter fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-      <a href="http://facebook.com">
-        <i class="fa fa-facebook fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-    <a href="http://linkedin.com" target=blank>
-    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="http://github.com" target="_blank">
-    <i class="fa fa-github fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-envelope-os fa-2x" aria-hidden="true"></i>
-    </a>
-    </li>
-  </ul>
-  </div>
-  </div>
- </span>
-
-</div>
-
-</div>
-
-
-
-</div> -->
 
 
 
