rajout fin html qui avait sauté

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -52,7 +52,7 @@
   
   <body>
 
-<div class="container-fluid">
+<div class="container">
 <!--     Header -->
   <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
     <div class="container-fluid">
@@ -60,26 +60,65 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+        <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-2 col-xs-1 col-xs-offset-2">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+        <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-2 col-xs-1 col-xs-offset-2">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK SAMPLES</a>
         </div>
       </div>
     </div>
   </nav>
-
 </div>
+
 
 <br/><br/><br/><br/>
 
-
-
-
 <!-- carousel -->
 
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class ="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="img/img1.jpg" alt="First slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h1>Katalina NADASI</h1>
+        <p>Integration / Front Development</p>
+        <p></br></br>
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+        </a></p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/img2.jpg" alt="Second slide" class="img-responsive">
+    </div>
+
+    <div class="item">
+      <img src="img/img3.jpg" alt="Third slide" class="img-responsive">
+    </div>
+
+    <div class="item">
+      <img src="img/img4.jpg" alt="Forth slide" class="img-responsive">
+    </div>
+
+  </div>
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">
+  <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
+
+<!-- <div id="myCarousel" class="carousel slide">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -108,13 +147,8 @@
     </div>
   </div>
 
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">
-  <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
+
+</div> -->
 
 <!-- section 1 resumé -->
 
@@ -227,21 +261,119 @@
 </div>
 </span>
 
+<!-- section 4 work -->
+<span class="text-center">
+<div class="row" id="section4">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1 class="text-center">WORK</h1>
+    <p class="text-center">blabla</p>
+  </div>
+</div>
+<span class="text-center">
+<div class="row" id="section4">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1 class="text-center">ADAWEEK</h1>
+    <p class="text-center">blabla</p>
+  </div>
+</div>
+<span class="text-center">
+<div class="row" id="section4">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1 class="text-center">REFUGINIUS</h1>
+    <p class="text-center">blabla</p>
+  </div>
+</div>
+<span class="text-center">
+<div class="row" id="section4">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h1 class="text-center">SNEAKR</h1>
+    <p class="text-center">blabla</p>
+  </div>
+</div>
+
+<!-- section 5 contact me -->
 
 <span class="text-center">
-  <div class="row" id="learn_more">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <p>
-      <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
-      </a>
-      </p>
-    </div>
+<div class="row" id="section5">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   </div>
+</div>
+
+<section id="two" class="wrapper style2 special">
+  <div class="inner narrow">
+    <header>
+      <h2>Get in touch</h2>
+    </header>
+    <form class="grid-form" method="post" action="#">
+      <div class="form-control narrow">
+        <label for="name">Name</label>
+        <input name="name" id="name" type="text">
+      </div>
+      <div class="form-control narrow">
+        <label for="email">Email</label>
+        <input name="email" id="email" type="email">
+      </div>
+      <div class="form-control">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" rows="4"></textarea>
+      </div>
+      <ul class="actions">
+          <li><input value="Send Message" type="submit"></li>
+          </ul>
+    </form>
+  </div>
+</section>
+
+<!-- footer -->
+<span class="text-center">
+<div class="row" id="section5">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  </div>
+</div>
+<span class="text-center">
+  <div class="row">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <ul class="list-inline">
+    <li>
+      <a href="http://twitter.com">
+      <i class="fa fa-twitter fa-2x"></i>&nbsp;
+      </a>
+    </li>
+    <li>
+      <a href="http://facebook.com">
+        <i class="fa fa-facebook fa-2x"></i>&nbsp;
+      </a>
+    </li>
+    <li>
+    <a href="http://linkedin.com" target=blank>
+    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="http://github.com" target="_blank">
+    <i class="fa fa-github fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="#" target="_blank">
+    <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
+    </a>
+    </li>
+    <a href="#" target="_blank">
+    <i class="fa fa-envelope-os fa-2x" aria-hidden="true"></i>
+    </a>
+    </li>
+  </ul>
+  </div>
+  </div>
+ </span>
+
+<span class="text-center">
+<div class="row" id="section5">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <h5>Make with care by <strong>Katalina Nadasi<strong></h5>
+  </div>
+</div>
 </span>
 
-</span>
-</div>
-</div>
 
 
 
@@ -355,41 +487,7 @@
 <!-- footer -->
 
 <!-- </br></br></br>
-<span class="text-center">
-  <div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <ul class="list-inline">
-    <li>
-      <a href="http://twitter.com">
-      <i class="fa fa-twitter fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-      <a href="http://facebook.com">
-        <i class="fa fa-facebook fa-2x"></i>&nbsp;
-      </a>
-    </li>
-    <li>
-    <a href="http://linkedin.com" target=blank>
-    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="http://github.com" target="_blank">
-    <i class="fa fa-github fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;
-    </a>
-    </li>
-    <a href="#" target="_blank">
-    <i class="fa fa-envelope-os fa-2x" aria-hidden="true"></i>
-    </a>
-    </li>
-  </ul>
-  </div>
-  </div>
- </span>
+
 
 </div>
 
@@ -408,8 +506,6 @@
 
 
 
-
-
 <!-- licence profil pic = <a href="http://www.freepik.com/free-photos-vectors/face">Face vector designed by Freepik</a> -->
 
 
@@ -417,7 +513,8 @@
 <!-- jquery and boostrap for js -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.js"></script> -->
+<script src="js/bootstrap.js"></script>
 
   </body>
 </html> 
