--- a/siteDemo.html
+++ b/siteDemo.html
@@ -47,12 +47,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+<!--     <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'> -->
 
   </head>
   
   <body>
 
-<div class="container">
+<div class="container-fluid">
 <!--     Header -->
   <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
     <div class="container-fluid">
@@ -64,15 +65,13 @@
           <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>
         </div>
         <div class="col-lg-2 col-lg-offset-3 col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-2 col-xs-1 col-xs-offset-2">
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK SAMPLES</a>
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK</a>
         </div>
       </div>
     </div>
   </nav>
 </div>
 
-
-<br/><br/><br/><br/>
 
 <!-- carousel -->
 
@@ -88,24 +87,32 @@
     <div class="item active">
       <img src="img/img1.jpg" alt="First slide" class="img-responsive">
       <div class="carousel-caption">
-        <h1>Katalina NADASI</h1>
-        <p>Integration / Front Development</p>
+        <h1>Katalina Nadasi</h1></br><h3>front developper and integrator</h3>
         <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          <a href="#" class="btn btn-default btn-lg text-center" id="buttonstyle" role="button">HIRE ME
         </a></p>
       </div>
     </div>
 
     <div class="item">
       <img src="img/img2.jpg" alt="Second slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h3>streetstyle lover</h3>
+      </div>
     </div>
 
     <div class="item">
       <img src="img/img3.jpg" alt="Third slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h3>parisian</h3>
+      </div>
     </div>
 
     <div class="item">
       <img src="img/img4.jpg" alt="Forth slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h3>joy dealer</h3>
+      </div>
     </div>
 
   </div>
@@ -115,42 +122,22 @@
   <a class="carousel-control right" href="#myCarousel" data-slide="next">
   <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
+
+</div>
 </div>
 
+</br></br></br></br>
 
-<!-- <div id="myCarousel" class="carousel slide">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <div class="carousel-inner">
-
-    <div class="item active"> 
-      <img src="img/img1.jpg" alt="First slide" class="img-responsive">
-      <div class="carousel-caption">
-        <h1>Katalina NADASI</h1>
-        <p>Integration / Front Development</p>
-        <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
-          </a></p>
-      </div>
-    </div>
-
-    <div class="item"> 
-      <img src="img/img2.jpg" alt="Second slide" class="img-responsive">
-    </div>
-
-    <div class="item"> 
-      <img src="img/#" alt="Third slide" class="img-responsive">
-    </div>
+<!-- section 1 bonjour -->
+<div class="row" id="section2">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  </br></br></br></br>
+  <h1 class="text-center">Bonjour. Hello.</h1>
+    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
   </div>
+</div>
 
-
-</div> -->
-
-<!-- section 1 resumé -->
+<!-- section 2 présentation -->
 
 <div class="row" id="section1">
   <span class="text-center">
@@ -208,15 +195,7 @@
   </div>
 </div>
 
-<!-- section 2 présentation -->
 
-<div class="row" id="section2">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </br></br></br></br>
-  <h1 class="text-center">Hi there !</h1>
-    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
-  </div>
-</div>
 
 <!-- section 3 présentation -->
 <span class="text-center">
