--- a/siteDemo.html
+++ b/siteDemo.html
@@ -60,21 +60,17 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK SAMPLES</a>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK</a>
         </div>
       </div>
     </div>
   </nav>
 
 </div>
-
-<br/><br/><br/><br/>
-
-
 
 
 <!-- carousel -->
@@ -91,8 +87,8 @@
     <div class="item active"> 
       <img src="img/img1.jpg" alt="First slide" class="img-responsive">
       <div class="carousel-caption">
-        <h1>Katalina NADASI</h1>
-        <p>Integration / Front Development</p>
+        <h1>Katalina n@d@si</h1>
+        <p>Front development and integrator</p>
         <p></br></br>
           <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
           </a></p>
@@ -100,12 +96,39 @@
     </div>
 
     <div class="item"> 
-      <img src="img/img2.jpg" alt="Second slide" class="img-responsive">
+      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h1>Katalina n@d@si</h1>
+        <p>streetstyle lover</p>
+        <p></br></br>
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          </a></p>
+      </div>
     </div>
 
     <div class="item"> 
-      <img src="img/#" alt="Third slide" class="img-responsive">
+      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h1>Katalina n@d@si</h1>
+        <p>parisian</p>
+        <p></br></br>
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          </a></p>
+      </div>
     </div>
+
+    <div class="item"> 
+      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
+      <div class="carousel-caption">
+        <h1>Katalina n@d@si</h1>
+        <p>joy dealer</p>
+        <p></br></br>
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          </a></p>
+      </div>
+    </div>
+
+
   </div>
 
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">
@@ -116,7 +139,14 @@
   </a>
 </div>
 
-<!-- section 1 resumé -->
+<!-- section 1 Hi -->
+<div class="row" id="section2">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  </br></br></br></br>
+  <h1 class="text-center">Bonjour. Hello.</h1>
+    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
+  </div>
+</div>
 
 <div class="row" id="section1">
   <span class="text-center">
@@ -126,6 +156,8 @@
   </div>
   </span>
 </div>
+
+<!-- section 2 resume -->
 
   <div class="row" id="section1row1">
     <span class="border">
@@ -176,17 +208,9 @@
   </div>
 </div>
 
-<!-- section 2 présentation -->
 
-<div class="row" id="section2">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  </br></br></br></br>
-  <h1 class="text-center">Hi there !</h1>
-    <p class="text-center">Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
-  </div>
-</div>
 
-<!-- section 3 présentation -->
+<!-- section 3 skills -->
 <span class="text-center">
 <div class="row" id="section3">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
