suite css bannière, exit le carousel

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
   </head>
   
@@ -73,71 +74,19 @@
 </div>
 
 
-<!-- carousel -->
+<!-- bannière -->
 
-<div id="myCarousel" class="carousel slide">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <div class="carousel-inner">
-
-    <div class="item active"> 
-      <img src="img/img1.jpg" alt="First slide" class="img-responsive">
-      <div class="carousel-caption">
-        <h1>Katalina n@d@si</h1>
-        <p>Front development and integrator</p>
+    <div class="banneer"> 
+      <img src="img/img1.jpg" alt="slide" class="img-responsive">
+        <div class="carousel-caption">
+        <h1>Katalina N@dasi</h1></br>
+        <h3>Front development and integrator</h3>
+        <p> streetstyle lover, parisian, joy dealer</p>
         <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
+          <a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME
           </a></p>
       </div>
     </div>
-
-    <div class="item"> 
-      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
-      <div class="carousel-caption">
-        <h1>Katalina n@d@si</h1>
-        <p>streetstyle lover</p>
-        <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
-          </a></p>
-      </div>
-    </div>
-
-    <div class="item"> 
-      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
-      <div class="carousel-caption">
-        <h1>Katalina n@d@si</h1>
-        <p>parisian</p>
-        <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
-          </a></p>
-      </div>
-    </div>
-
-    <div class="item"> 
-      <img src="img/img2.jpg" alt="Third slide" class="img-responsive">
-      <div class="carousel-caption">
-        <h1>Katalina n@d@si</h1>
-        <p>joy dealer</p>
-        <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">HIRE ME
-          </a></p>
-      </div>
-    </div>
-
-
-  </div>
-
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">
-  <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
 
 <!-- section 1 Hi -->
 <div class="row" id="section2">
