--- a/siteDemo.html
+++ b/siteDemo.html
@@ -59,13 +59,19 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>
+          <img src="img/logo.jpg" alt="logo" class="img-responsive" id="logo">
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-4 col-md-offset-4 col-sm-offset-3 col-xs-offset-3">
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-2">
+       <!--  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
+         
+        </div> -->
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK</a>
+        </div>
+        </div>
         </div>
       </div>
     </div>
@@ -76,12 +82,11 @@
 
 <!-- bannière -->
 
-    <div class="banneer"> 
+    <div class="banner" id="banner"> 
       <img src="img/img1.jpg" alt="slide" class="img-responsive">
         <div class="carousel-caption">
-        <h1>Katalina N@dasi</h1></br>
-        <h3>Front development and integrator</h3>
-        <p> streetstyle lover, parisian, joy dealer</p>
+        <h1>Hey, I'm Katalina Nadasi</br>Designer Front-End Developer and integrator.</h1></br>
+        <h3>parisian,</br></br>streetstyle lover,</br></br>and joy dealer</h3>
         <p></br></br>
           <a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME
           </a></p>
