rajout couleurs et div

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -82,11 +82,11 @@
 
 <!-- bannière -->
 
-    <div class="banner" id="banner"> 
+    <div class="banner1" id="banner1"> 
       <img src="img/img1.jpg" alt="slide" class="img-responsive">
         <div class="carousel-caption">
         <h1>Hey, I'm Katalina Nadasi</br>Designer Front-End Developer and integrator.</h1></br>
-        <h3>parisian,</br></br>streetstyle lover,</br></br>and joy dealer</h3>
+<!--         <h3>parisian,</br></br>streetstyle lover,</br></br>and joy dealer</h3> -->
         <p></br></br>
           <a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME
           </a></p>
@@ -94,7 +94,7 @@
     </div>
 
 <!-- section 1 Hi -->
-<div class="row" id="section2">
+<div class="row" id="sectionHi">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   </br></br></br></br>
   <h1 class="text-center">Bonjour. Hello.</h1>
@@ -102,7 +102,8 @@
   </div>
 </div>
 
-<div class="row" id="section1">
+<!-- section 2 resume -->
+<div class="row" id="section2">
   <span class="text-center">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <h1>RESUME</h1>
@@ -111,9 +112,9 @@
   </span>
 </div>
 
-<!-- section 2 resume -->
 
-  <div class="row" id="section1row1">
+<div class="container" id="sectionResume">
+  <div class="row" id="section2row1">
     <span class="border">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="feature">
@@ -139,6 +140,7 @@
           <p>Divers projets d'intégration</p>
       </div>
     </div>
+    
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <h2>Sneakr.fr</h2>
@@ -161,6 +163,7 @@
     </div>
   </div>
 </div>
+</div>
 
 
 
@@ -173,6 +176,8 @@
   </div>
 </div>
 
+<div class="container" id="thumbStyle">
+</br></br></br>
 <div class="row" id="thumb">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
       <div class="feature2">
@@ -189,7 +194,7 @@
     </div>
 </div>
 
-
+</br></br></br>
 <div class="row" id="thumb">
   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 thumb-child">
     <div class="feature2">
@@ -204,6 +209,8 @@
       <h2>Système versioning</h2>
         <p>git et github, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum. ET MARKETING DIGITAL, présence en lignen réseaux sociaux.</p>
   </div>
+</div>
+</br></br></br>
 </div>
 </span>
 
