--- a/siteDemo.html
+++ b/siteDemo.html
@@ -325,7 +325,7 @@
 
 <span class="text-center">
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h5>Made with <strong>love<strong></h5><i class="icon-fire"></i>
+    <h5>Made with <strong><i class="glyphicon glyphicon-heart"></i><h5>
     <h5>by<strong> Katalina Nadasi<strong></h5>
 </div>
 </span>
@@ -444,19 +444,6 @@
   </div>
 </span> -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- licence profil pic = <a href="http://www.freepik.com/free-photos-vectors/face">Face vector designed by Freepik</a> -->
 
 
 
