--- a/siteDemo.html
+++ b/siteDemo.html
@@ -42,7 +42,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
 <!--boostrap style*/ -->
-    <link rel="stylesheet" type="text/css" href="css/boostrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <!-- fontawesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <!-- google font -->
@@ -53,20 +53,49 @@
   
   <body>
 
-<div class="container-fluid">
-<!--     Header -->
-  <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+
+<!--     nav -->
+  
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation>" id="navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a href="#"><img src="img/logo.jpg" alt="logo" class="img-responsive" id="logo"></a>
+
+      </div>
+
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Work</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+ <!--  <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
           <img src="img/logo.jpg" alt="logo" class="img-responsive" id="logo">
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-4 col-md-offset-4 col-sm-offset-3 col-xs-offset-3">
-        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+        </div> -->
        <!--  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
          
         </div> -->
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+        <!-- <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
           <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK</a>
@@ -77,7 +106,7 @@
     </div>
   </nav>
 
-</div>
+</div> -->
 
 
 <!-- bannière -->
@@ -450,7 +479,7 @@
 <!-- jquery and boostrap for js -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
   </body>
 </html> 
