--- a/siteDemo.html
+++ b/siteDemo.html
@@ -47,19 +47,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
   </head>
   
   <body>
 
 
-<!--     nav -->
+<!-- NAVBAR -->
   
   <div class="navbar navbar-default navbar-fixed-top" role="navigation>" id="navbar">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" id="navbar-toggle">
         <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -80,6 +80,8 @@
 
     </div>
   </div>
+
+  <!-- END NAVBAR -->
 
 
 
