--- a/siteDemo.html
+++ b/siteDemo.html
@@ -83,46 +83,53 @@
 
   <!-- END NAVBAR -->
 
+  <!-- HEADER -->
 
-
-
- <!--  <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
-    <div class="container-fluid">
+  <div class="header">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
-          <img src="img/logo.jpg" alt="logo" class="img-responsive" id="logo">
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+          <h2>Welcome</h2>
+          <h1>Welcome</h1>
+          <p>Hey, I'm Katalina Nadasi</p>
+          <p>I'm a designer Front-End Developer and integrator.</p>
+          <p>And also parisian, streetstyle lover, and joy dealer.</p>
+          <p>Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
+
+          <ul class="list-inline">
+          <li><a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME</a></li>
+          </ul>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
-        </div> -->
-       <!--  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-1">
-         
-        </div> -->
-        <!-- <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">RESUME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">SKILLS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="#" class="btn btn-default btn-sm text-center" role="button">WORK</a>
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+          <img class="img-responsive" src="img/banner.png">
+
+
         </div>
-        </div>
-        </div>
+
+
       </div>
     </div>
-  </nav>
+  </div>
 
-</div> -->
+  <!-- END HEADER -->
 
 
 <!-- bannière -->
 
-    <div class="banner1" id="banner1"> 
-      <img src="img/img1.jpg" alt="slide" class="img-responsive">
-        <div class="carousel-caption">
-        <h1>Hey, I'm Katalina Nadasi</br>Designer Front-End Developer and integrator.</h1></br>
-<!--         <h3>parisian,</br></br>streetstyle lover,</br></br>and joy dealer</h3> -->
-        <p></br></br>
-          <a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME
-          </a></p>
+    <!-- <div class="banner1" id="banner1">  -->
+<!--       <img src="img/img1.jpg" alt="slide" class="img-responsive"> -->
+<!--         <div class="carousel-caption">
+
+          
       </div>
-    </div>
+    </div> -->
+
+
+
+
 
 <!-- section 1 Hi -->
 <div class="row" id="sectionHi">
