rajout images header

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -103,8 +103,8 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-          <img class="img-responsive" src="img/banner.png">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></br></br></br>
+          <img class="img-responsive" src="img/banner.jpg">
 
 
         </div>
