rajout img bannière

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -90,8 +90,6 @@
       <div class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-          <h2>Welcome</h2>
           <h1>Welcome</h1>
           <p>Hey, I'm Katalina Nadasi</p>
           <p>I'm a designer Front-End Developer and integrator.</p>
@@ -103,7 +101,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></br></br></br>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
           <img class="img-responsive" src="img/banner.jpg">
 
 
