rajout style button et image de fond header

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -38,7 +38,7 @@
 <!-- link sheets -->
 <!-- bootstrap -->
     <link href="css/boostrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
 <!--boostrap style*/ -->
@@ -48,6 +48,7 @@
 <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 
   </head>
   
@@ -97,7 +98,7 @@
           <p>Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
 
           <ul class="list-inline">
-          <li><a href="#" class="btn btn-default btn-lg text-center" role="button">WORK WITH ME</a></li>
+          <li><a href="#" class="btn btn-trans btn-lg text-center" role="button">WORK WITH ME</a></li>
           </ul>
         </div>
 
@@ -113,17 +114,6 @@
   </div>
 
   <!-- END HEADER -->
-
-
-<!-- bannière -->
-
-    <!-- <div class="banner1" id="banner1">  -->
-<!--       <img src="img/img1.jpg" alt="slide" class="img-responsive"> -->
-<!--         <div class="carousel-caption">
-
-          
-      </div>
-    </div> -->
 
 
 
