--- a/siteDemo.html
+++ b/siteDemo.html
@@ -95,8 +95,8 @@
           <p>Hey, I'm Katalina Nadasi</p>
           <p>I'm a designer Front-End Developer and integrator.</p>
           <p>And also parisian, streetstyle lover, and joy dealer.</p>
-          <p>Looking for someone helping you on your website and update it with some creative staff? You're on the right place. </br> Let me explain what can I do for you.</p>
-
+          <p>Looking for someone helping you on a responsive website? You're on the right place. </br> Let me explain what can I do for you.</p>
+</br></br></br>
           <ul class="list-inline">
           <li><a href="#" class="btn btn-trans btn-lg text-center" role="button">WORK WITH ME</a></li>
           </ul>
