rajout media queries header

--- a/siteDemo.html
+++ b/siteDemo.html
@@ -95,8 +95,8 @@
           <p>Hey, I'm Katalina Nadasi</p>
           <p>I'm a designer Front-End Developer and integrator.</p>
           <p>And also parisian, streetstyle lover, and joy dealer.</p>
-          <p>Looking for someone helping you on a responsive website? You're on the right place. </br> Let me explain what can I do for you.</p>
-</br></br></br>
+          <p>Looking for someone helping you on a responsive website? You're on the right place. </br> Let me explain what can I do for you.</p></br></br>
+
           <ul class="list-inline">
           <li><a href="#" class="btn btn-trans btn-lg text-center" role="button">WORK WITH ME</a></li>
           </ul>
@@ -361,116 +361,6 @@
 
 </div>
 </div>
-
-
-
-
-
-
-<!-- section 1 -->
-
-<!-- 
-
-
-<span class="text-center">
-  <div class="row" id="pSection1">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="border_middle">
-      <h2>SED IMPERDIET</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.
-      </p>
-      <p>
-      </span>
-        </br>
-      <a href="#" class="btn btn-default btn-lg text-center"  role="button">LEARN MORE
-      </a>
-      </p>
-    </div>
-
-   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></br></br></br>
-    <h2 class="text-center">SED IMPERDIET</h2>
-      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.
-      </p></br>
-        <p>
-        <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
-        </a>
-        </p>
-  </div>
-</div>
-
-<! section 2 -->
-<!-- 
-<span class="text-center">
-<div class="row" id="section2">
-  <div class ="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <h1>CONVALLIS PRETIUM</h1>
-        <p>LOREM IPSUM LACUS ADIPISCING</p>
-        </br></br>
-  </div>
-</div>
-
-<div class="row" id="section2text">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="border-right: 1px solid white;">
-    <img src="pics/#" alt="etiam consequat" />
-    <h2>ETIAM CONSEQUAT</h2></br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br/>Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.</p>
-    <p><a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE</a></p>
-  </div>
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    <img src="pics/pic2.jpg" alt="lacus elementum">
-    <h2>LACUS ELEMENTUM</h2></br>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, lorem in pretium aliquet, lacus dui tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque iaculis imperdiet et elementum.</p>
-    <p><a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE</a></p>
-  </div>
-</div> -->
-
-
-
-<!-- section 3 -->
-
-
-<!-- section 4 -->
-
-<!-- <div class="row" id="section4">
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"></br></br>
-    <h2>SED TRISIQUE</h2>
-      <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elementum.
-      </p>
-  </div>
-
-  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-    </br></br>
-      <form action='/'>
-        <div class='form-group'>
-          <label for='email'>NAME</label>
-          <input id='email' type='name' class='form-control' placeholder='Emily'>
-        </div>
-        <div class='form-group'>
-          <label for='email'>EMAIL</label>
-          <input id='email' type='email' class='form-control' placeholder='email@domain.com'>
-        </div>
-          </input type='submit' value='Apply' class='btn btn-primary'>
-      </form>
-          </label>
-  </div>
-</div> -->
-
-<!-- section 5 -->
-<!-- <span class="text-center">
-  <div class="row" id="section5">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><br/><br/><br/>
-    <h2>MAGNA FEUGIAT LOREM IPSUM?</h2>
-      <p>Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus imperdiet et elementum. Nulla imperdiet, lorem in pretium sed aliquet, lacus dui magna tristique la.</p>
-      <br/><br/><br/>
-        <p>
-          <a href="#" class="btn btn-default btn-lg" role="button">LEARN MORE
-          </a>
-          </br></br></br>
-        </p>
-    </div>
-  </div>
-</span> -->
-
-
 
 
 <!-- jquery and boostrap for js -->
