--- a/siteDemo.html
+++ b/siteDemo.html
@@ -93,12 +93,13 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <h1>Welcome</h1>
           <p>Hey, I'm Katalina Nadasi</p>
-          <p>I'm a designer Front-End Developer and integrator.</p>
-          <p>And also parisian, streetstyle lover, and joy dealer.</p>
-          <p>Looking for someone helping you on a responsive website? You're on the right place. </br> Let me explain what can I do for you.</p></br></br>
+          <p>I'm a Front-End Developer and integrator based in Paris</p>
+          <p>Also parisian, streetstyle lover, and joy dealer.</p>
+          <p>Responsive and pixel perfection</p>
+          </br></br>
 
           <ul class="list-inline">
-          <li><a href="#" class="btn btn-trans btn-lg text-center" role="button">WORK WITH ME</a></li>
+          <li><a href="#" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
           </ul>
         </div>
 
@@ -114,6 +115,50 @@
   </div>
 
   <!-- END HEADER -->
+
+  <!--   ABOUT -->
+
+  <div class="about">
+    <div class="container">
+
+      <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h1>What I can do for you ?</h1>
+        <p><em>fdfdfdfdfdfdfdfdfdfdfdf</em></p>
+      </div>
+      </div>
+
+
+      <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h1>Studies</h1>
+      </div>
+      </div>
+
+      <div class="row">
+
+      <div class="col-lg-4 col-md-4">
+        <img src="img/lewagon.jpg" class="img-circle">
+        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
+      </div>
+
+      <div class="col-lg-4 col-md-4">
+        <img src="img/lewagon.jpg" class="img-circle">
+        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
+      </div>
+
+      <div class="col-lg-4 col-md-4">
+        <img src="img/lewagon.jpg" class="img-circle">
+        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
+      </div>
+
+      </div>
+
+    </div>
+  </div>
+
+
+  <!--   END ABOUT -->
 
 
 
