--- a/siteDemo.html
+++ b/siteDemo.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
-          <img class="img-responsive" src="img/banner.jpg">
+          <img class="img-responsive" src="#.jpg">
 
 
         </div>
@@ -116,7 +116,7 @@
 
   <!-- END HEADER -->
 
-  <!--   ABOUT -->
+  <!--   STUDIES -->
 
   <div class="about">
     <div class="container">
@@ -137,19 +137,14 @@
 
       <div class="row">
 
-      <div class="col-lg-4 col-md-4">
-        <img src="img/lewagon.jpg" class="img-circle">
+      <div class="col-lg-6 col-md-6">
+        <img src="img/lewagon.jpg" class="img-circle" id="img">
         <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
       </div>
 
-      <div class="col-lg-4 col-md-4">
-        <img src="img/lewagon.jpg" class="img-circle">
-        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
-      </div>
-
-      <div class="col-lg-4 col-md-4">
-        <img src="img/lewagon.jpg" class="img-circle">
-        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>Le wagon</footer>
+      <div class="col-lg-6 col-md-6">
+        <img src="img/escDijon.jpg" id="img">
+        <blockquote><p><em>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</em></p></blockquote><footer>ESC Dijon</footer>
       </div>
 
       </div>
@@ -158,7 +153,58 @@
   </div>
 
 
-  <!--   END ABOUT -->
+  <!--   END STUDIES -->
+
+  <!--   SKILLS -->
+
+  <div class="skills">
+    <div class="container">
+
+      <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h1>FEATURES</h1>
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.</p>
+      </div>
+      </div>
+
+    <div class="row">
+    <div class="col-lg-4 col-md-4">
+      <h4>Frontend</h4>
+      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+
+      <h4>Responsive</h4>
+      <p>Bootstrap, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+    
+
+      <h4>Backend</h4>
+      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+
+    </div>
+
+    <div class="col-lg-4 col-md-4" align="center">
+      <img class="img-responsive" src="img/banner.jpg"/>
+    </div>
+
+    <div class="col-lg-4 col-md-4">
+      <h4>Product</h4>
+      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magna tristique lacus, vel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+
+      <h4>Database</h4>
+      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+
+      <h4>Versioning system</h4>
+      <p>Html5, CSS 3, Javascript et Jquery. Lorem in pretium sed aliquet, lacus dui magnvel convallis justo lectus in augue. Tempus pellentesque imperdiet et elemen</p>
+    </div>
+
+    </div>
+
+
+
+  </div>
+</div>
+
+
+  <!--   END SKILLS -->
 
 
 
